Fix for size and spacing of text

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -81,6 +81,10 @@ button:hover, button:active {
     height: 950px; 
 }
 
+#scatterplot {
+    height: 700px; 
+}
+
 #linechart {
     height: 535px; 
 }
